<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmployeeSignInActivity">
    <TextView
        android:id="@+id/tv_phone"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/button_font_size"/>
    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/translucent_button"
        android:text="@string/sign_in"
        android:textSize="@dimen/button_font_size"/>
   <TextView
       android:id="@+id/tv_sign_in_success"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
    <ListView
        android:id="@+id/lv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_attendance_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_attendance_status" />

    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out_of_login" />
</LinearLayout>